# titanic_project

./: README.md  pyproject.toml
data/: kaggle.csv  titanic_test.csv  titanic_train.csv
titanic_project/: analise_descritiva.ipynb  model.ipynb
